// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reducers/life should get state after action: putAccessToken with action: {"payload": [Object], "type": "PUT_ACCESS_TOKEN"} 1`] = `
Object {
  "credentials": Object {
    "accessToken": "9123",
    "clientId": "",
    "clientSecret": "",
  },
  "status": true,
}
`;

exports[`reducers/life should get state after action: putCredentials with action: {"payload": [Object], "type": "PUT_CREDENTIALS"} 1`] = `
Object {
  "credentials": Object {
    "accessToken": "",
    "clientId": "1234",
    "clientSecret": "5678",
  },
  "status": true,
}
`;
